# TevianClient

./: .gitignore  CMakeLists.txt  README.md  decode.bat
dependencies/: CMakeLists.txt
dependencies/Http/: .gitignore  CMakeLists.txt  README.md
dependencies/Http/src/: CMakeLists.txt
dependencies/Http/src/include/Http/HttpClient/: Callback.hpp  Speaker.hpp
dependencies/Http/src/include/Http/HttpClient/Interfaces/: IHTTPSpeaker.hpp
dependencies/Http/src/src/: Callback.cpp  Speaker.cpp
dependencies/ProgramOptionsComponent/: CMakeLists.txt  README.md
dependencies/ProgramOptionsComponent/include/Base/ProgramOptions/: AbstractParser.hpp  SingletonParser.hpp
dependencies/ProgramOptionsComponent/src/: AbstractParser.cpp  SingletonParser.cpp
src/: CMakeLists.txt
src/CLI/: CMakeLists.txt
src/CLI/include/CLI/: ConsoleApplication.hpp
src/CLI/src/: ConsoleApplication.cpp  main.cpp
src/Domain/: CMakeLists.txt
src/Domain/include/Domain/: Face.hpp  IClient.hpp  Picture.hpp  TevianClient.hpp
src/Domain/src/: Face.cpp  Picture.cpp  TevianClient.cpp
src/Gui/: CMakeLists.txt
src/Gui/resources/qml/: main.qml  qml.qrc  qtquickcontrols2.conf
src/Gui/resources/qml/MainWindow/: Body.qml  Footer.qml  Header.qml
src/Gui/src/: main.cpp
src/Gui/src/QmlApplication/: QmlApplication.cpp  QmlApplication.hpp
